added board and boardListCard'

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
     </div>
     <div class="main-container">
         <div class="sidebar-container">
-            <div>CoolWorkspace</div>
+            <div class="sidebar-workspace">
+                <div>
+                    CoolWorkspace
+                </div>
+                <button id="sidebar-button" onclick="sidebar_workspace_button()">
+                    < </button>
+            </div>
             <div>
                 <p>Boards</p>
                 <p>Members</p>
@@ -40,13 +46,13 @@
         <div class="content-container">
             <h1>CoolWorkspace</h1>
             <p>Boards</p>
-            <div class="content-board-container">
-
-            </div>
+            <div class="content-board-container"</div>
         </div>
+    </div>
 </body>
+<script src="button-script.js"></script>
 <script>
-    const divElement = document.querySelector('.make-div');
+
 </script>
 
 </html>
