--- a/index.html
+++ b/index.html
@@ -5,26 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trello Clone</title>
+
     <link rel="stylesheet" href="./style.css">
     <script type="module" src="script.js"></script>
 </head>
 
 <body>
     <div class="header">
-        <div style="display: flex;">
-            <p>Trello</p>
-            <p>Workspace</p>
-            <p>Recent</p>
-            <p>Starred</p>
-            <p>Template</p>
-            <p>Create</p>
+        <div class="center-flex">
+            <img src="./assets/trello.png" alt="TRELLO" style="height: 30px; background-color: #a1adbb;">
 
         </div>
-        <div style="display: flex;">
-            <p>SearchBar</p>
-            <p>Profile</p>
+        <div class="header-create-btn-container">
+            <button id="show-form-btn" class="submit-btn">Create Board</button>
+            <div id="board-form">
+                <form id="board-name-form">
+                    <label for="board-name">Board Name</label>
+                    <input type="text" id="board-name" required>
+                    <button type="submit" class="submit-btn" style="border-radius: 5px;">Submit</button>
+                </form>
+            </div>
         </div>
     </div>
+
     <div class="main-container">
         <div class="sidebar-container">
             <div class="sidebar-workspace">
@@ -46,13 +49,30 @@
         <div class="content-container">
             <h1>CoolWorkspace</h1>
             <p>Boards</p>
-            <div class="content-board-container"</div>
+            <div class="content-board-container" </div>
+            </div>
         </div>
-    </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+
 </body>
-<script src="button-script.js"></script>
+<script src="button-script.js" type="module" ></script>
 <script>
+    function sidebar_workspace_button() {
+    const buttonEle = document.getElementById("sidebar-button");
+    const ele = document.querySelector(".sidebar-container");
 
+    if (buttonEle.innerText == "<") {
+        ele.style.width = "20px";
+        buttonEle.innerText = ">";
+        ele.style.backgroundColor = "white";
+    } else {
+        ele.style.width = "20%";
+        buttonEle.innerText = "<";
+        ele.style.backgroundColor = "#747d87";
+    }
+}
 </script>
-
 </html>
