--- a/pages/board-info.html
+++ b/pages/board-info.html
@@ -19,10 +19,10 @@
 
         </div>
         <div class="header-create-btn-container">
-            <button id="show-form-btn" class="submit-btn">Create Board</button>
+            <button id="show-form-btn" class="submit-btn">Create List</button>
             <div id="board-form">
                 <form id="board-name-form">
-                    <label for="board-name">Board Name</label>
+                    <label for="board-name">List Name</label>
                     <input type="text" id="board-name" required>
                     <button type="submit" class="submit-btn" style="border-radius: 5px;">Submit</button>
                 </form>
@@ -69,7 +69,9 @@
         </div>
     </div>
 </body>
-<script src="../button-script.js"></script>
+<!-- <script src="../button-script.js"></script> -->
+<script src="board-btn-script.js" type="module"></script>
+
 <script>
     function sidebar_workspace_button() {
     const buttonEle = document.getElementById("sidebar-button");
