delete board done

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
         <div class="content-container">
             <h1>CoolWorkspace</h1>
-            <p>Boards</p>
-            <div class="content-board-container" </div>
+            <h2>Boards</h2>
+            <div class="content-board-container"> </div>
             </div>
         </div>
 
