final commit version 1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="header">
         <div class="center-flex">
-            <img src="./assets/trello.png" alt="TRELLO" style="height: 30px; background-color: #a1adbb;">
+            <a href="./ind  ex.html">
+                <img src="./assets/trello.png" alt="TRELLO" style="height: 30px; background-color: #a1adbb;">
+            </a>
 
         </div>
         <div class="header-create-btn-container">
